; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_execGrouping.c_BuildTupleHashTable.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_execGrouping.c_BuildTupleHashTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BuildTupleHashTable(i32* %0, i32 %1, i32 %2, i32* %3, i32* %4, i32* %5, i32* %6, i64 %7, i32 %8, i32 %9, i32 %10, i32 %11) #0 {
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i64, align 8
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  store i32* %0, i32** %13, align 8
  store i32 %1, i32* %14, align 4
  store i32 %2, i32* %15, align 4
  store i32* %3, i32** %16, align 8
  store i32* %4, i32** %17, align 8
  store i32* %5, i32** %18, align 8
  store i32* %6, i32** %19, align 8
  store i64 %7, i64* %20, align 8
  store i32 %8, i32* %21, align 4
  store i32 %9, i32* %22, align 4
  store i32 %10, i32* %23, align 4
  store i32 %11, i32* %24, align 4
  %25 = load i32*, i32** %13, align 8
  %26 = load i32, i32* %14, align 4
  %27 = load i32, i32* %15, align 4
  %28 = load i32*, i32** %16, align 8
  %29 = load i32*, i32** %17, align 8
  %30 = load i32*, i32** %18, align 8
  %31 = load i32*, i32** %19, align 8
  %32 = load i64, i64* %20, align 8
  %33 = load i32, i32* %21, align 4
  %34 = load i32, i32* %22, align 4
  %35 = load i32, i32* %22, align 4
  %36 = load i32, i32* %23, align 4
  %37 = load i32, i32* %24, align 4
  %38 = call i32 @BuildTupleHashTableExt(i32* %25, i32 %26, i32 %27, i32* %28, i32* %29, i32* %30, i32* %31, i64 %32, i32 %33, i32 %34, i32 %35, i32 %36, i32 %37)
  ret i32 %38
}

declare dso_local i32 @BuildTupleHashTableExt(i32*, i32, i32, i32*, i32*, i32*, i32*, i64, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
